--- a/Makefile.in
+++ b/Makefile.in
@@ -137,10 +137,8 @@ clean:
 	@$(RMF) config.log config.out
 	@$(RMF) examples/1 examples/2 examples/devices/1 examples/devices/2
 	@$(RMF) -r autom4te.cache
-	@$(RMF) cross-tools-mingw32
-	@$(RMF) cross-tools-mingw64
-	@$(RMF) depkgs-mingw32
-	@$(RMF) depkgs-mingw64
+	@$(RMF) burp-cross-tools
+	@$(RMF) burp-depkgs
 	@find . -name ".#*" -exec $(RMF) {} \;
 
 
