--- a/src/win32/Makefile.rules
+++ b/src/win32/Makefile.rules
@@ -24,13 +24,13 @@ define makedep
 endef
 
 define link_conapp
-	@echo "Linking $@"
+	@echo "Linkingc $@"
 	$(call checkdir,$@)
-	$(ECHO_CMD)$(CXX) $(CFLAGS) $(LDFLAGS) -mconsole $^ $(1) -o $@
+	$(ECHO_CMD)$(CXX) $(CFLAGS) $(LDFLAGS) -static -mconsole $^ $(1) -o $@
 endef
 
 define link_winapp
-	@echo "Linking $@"
+	@echo "Linkingb $@"
 	$(call checkdir,$@)
 	$(ECHO_CMD)$(CXX) $(CFLAGS) $(LDFLAGS) -mwindows $^ $(1) -o $@
 endef
