--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -5,7 +5,7 @@ port = 4971
 status_port = 4972
 directory = /var/spool/burp
 clientconfdir = /etc/burp/clientconfdir
-pidfile = /var/run/burp/server.pid
+pidfile = /var/run/burp.server.pid
 hardlinked_archive = 0
 working_dir_recovery_method = delete
 max_children = 5
