--- a/configs/client/cron.example
+++ b/configs/client/cron.example
@@ -1,6 +1,5 @@
-MAILTO=
 # Run the burp client every 20 minutes with the 'timed' option. The burp server
 # will decide whether it is yet time to do a backup or not.
 # It might be a good idea to change the numbers below for different clients,
 # in order to spread the load a bit.
-7,27,47 * * * *	root	/sbin/burp -a t
+7,27,47 * * * *	root	/sbin/burp -a t >>/var/log/burp-client 2>&1
