--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -147,7 +147,8 @@ libtool-clean:
 
 clean:	libtool-clean
 	@$(RMF) burp core core.* a.out *.o *.bak *~ *.intpro *.extpro 1 2 3
-	@$(RMF) bedup static-burp static-bedup
+	@$(RMF) bedup static-burp static-bedup config.h
+	@$(RMF) Makefile
 #	@if test -f win32/Makefile -a "${GMAKE}" != "none"; then \
 #	   (cd win32; $(GMAKE) clean); \
 #	fi
