--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1576,10 +1576,10 @@ if test X"$GCC" = "Xyes" ; then
 fi
 
 # clean up any old junk
-echo " "
-echo "Cleaning up"
-echo " "
-${MAKE:-make} clean
+#echo " "
+#echo "Cleaning up"
+#echo " "
+#${MAKE:-make} clean
 
 echo "
 Configuration on `date`:
