--- a/Makefile.in
+++ b/Makefile.in
@@ -140,6 +140,10 @@ clean:
 	@$(RMF) burp-cross-tools
 	@$(RMF) burp-depkgs
 	@$(RMF) Makefile
+	@$(RMF) website/html/*.html
+	@$(RMF) website/html/*.html
+	@$(RMF) -r website/html/faq
+	@$(RMF) -r website/html/txt
 	@find . -name ".#*" -exec $(RMF) {} \;
 
 
