Some extra notes about the new '. path/to/config' syntax.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -16,6 +16,10 @@ pidfile = /var/run/burp.client.pid
 # OS path component for the autoupgrade directory on the server.
 # autoupgrade_os=test_os
 
+# More configuration files can be read, using syntax like the following
+# (without the leading '# ').
+# . path/to/more/conf
+
 include = /home
 #exclude = /home/graham/testdir/librsync-0.9.7/testsuite
 #include = /home/graham/testdir/librsync-0.9.7/testsuite/deep
