--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -15,6 +15,10 @@ umask = 0022
 # Network timeout defaults to 7200 seconds (2 hours).
 # network_timeout = 7200
 
+# More configuration files can be read, using syntax like the following
+# (without the leading '# ').
+# . path/to/more/conf
+
 # Location of autoupgrade files to serve to clients. Leave it commented out
 # to not autoupgrade clients.
 # autoupgrade_dir = /etc/burp/autoupgrade/server
