Separate prepend functions into their own file so that I can include them without including handy.h.

--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -52,6 +52,7 @@ FILED_OBJS = \
 	$(OBJDIR)/log.o \
 	$(OBJDIR)/main.o \
 	$(OBJDIR)/msg.o \
+	$(OBJDIR)/prepend.o \
 	$(OBJDIR)/prog.o \
 	$(OBJDIR)/restore_client.o \
 	$(OBJDIR)/rs_buf.o \
