Add the ability for the server to set the client include/excludes.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -20,25 +20,6 @@ pidfile = /var/run/burp.client.pid
 # (without the leading '# ').
 # . path/to/more/conf
 
-include = /home
-#exclude = /home/graham/testdir/librsync-0.9.7/testsuite
-#include = /home/graham/testdir/librsync-0.9.7/testsuite/deep
-#include = /home/graham/xdir
-#exclude = /home/graham/testdir/libr
-# Exclude file names ending in '.vdi' or '.vmdk' (case insensitive)
-#exclude_ext = vdi
-#exclude_ext = vmd
-# Exclude various temporary file systems. You may want to add devfs, devpts,
-# proc, ramfs, etc.
-exclude_fs = sysfs
-exclude_fs = tmpfs
-# Exclude files based on size. Defaults are 0, which means no limit.
-#min_file_size = 0 Mb
-#max_file_size = 0 Mb
-# The content of directories containing a filesystem entry named like this
-# will not be backed up.
-nobackup = .nobackup
-
 # Run as different user/group.
 # user=graham
 # group=nogroup
@@ -67,6 +48,27 @@ ssl_peer_cn = grkeserver
 #restore_script_pre=/path/to/a/script
 #restore_script_post=/path/to/a/script
 
+# The following options specify exactly what to backup.
+# The server will override them if there is at least one 'include=' line on
+# the server side.
+include = /home
+#exclude = /home/graham/testdir/librsync-0.9.7/testsuite
+#include = /home/graham/testdir/librsync-0.9.7/testsuite/deep
+#include = /home/graham/xdir
+#exclude = /home/graham/testdir/libr
+# Exclude file names ending in '.vdi' or '.vmdk' (case insensitive)
+#exclude_ext = vdi
+#exclude_ext = vmd
+# Exclude various temporary file systems. You may want to add devfs, devpts,
+# proc, ramfs, etc.
+exclude_fs = sysfs
+exclude_fs = tmpfs
+# Exclude files based on size. Defaults are 0, which means no limit.
+#min_file_size = 0 Mb
+#max_file_size = 0 Mb
+# The content of directories containing a filesystem entry named like this
+# will not be backed up.
+nobackup = .nobackup
 # By default, burp backups up the fifos themselves, rather than reading from
 # them. These two options let you choose a particular fifo to read, or read
 # from all fifos.
