--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -9,6 +9,7 @@ pidfile = /var/run/burp.server.pid
 hardlinked_archive = 0
 working_dir_recovery_method = delete
 max_children = 5
+max_status_children = 5
 umask = 0022
 # Ratelimit throttles the send speed. Specified in Megabits per second (Mb/s).
 # ratelimit = 1.5
