--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -56,6 +56,10 @@ timer_script = /etc/burp/timer_script
 # s (seconds), m (minutes), h (hours), d (days), w (weeks), n (months)
 timer_arg = 20h
 # Allow backups to start in the evenings and nights during weekdays
+# Note: The default timer script uses the 'date' command with the %a format
+# argument to get the day of the week. The output of this changes depending on
+# the LANG environment variable, so if you are having trouble with the day
+# arguments here, check what the output of 'date +%a' gives you.
 timer_arg = Mon,Tue,Wed,Thu,Fri,00,01,02,03,04,05,19,20,21,22,23
 # Allow more hours at the weekend.
 timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
