* Windows installer: add comment about poll interval '0' means that the     scheduled job isn't installed.   * Windows installer: don't install the scheduled task when doing an upgrade.

--- a/src/win32/burp/Makefile
+++ b/src/win32/burp/Makefile
@@ -44,8 +44,8 @@ FILED_OBJS = \
 	$(OBJDIR)/extrameta.o \
 	$(OBJDIR)/find.o \
 	$(OBJDIR)/forkchild.o \
-	$(OBJDIR)/incexc_recv_client.o \
-	$(OBJDIR)/incexc_send_client.o \
+	$(OBJDIR)/incexc_recv.o \
+	$(OBJDIR)/incexc_send.o \
 	$(OBJDIR)/list_client.o \
 	$(OBJDIR)/handy.o \
 	$(OBJDIR)/lock.o \
