--- a/src/win32/installer/ConfigPage2.ini
+++ b/src/win32/installer/ConfigPage2.ini
@@ -19,7 +19,7 @@ Bottom=10
 
 [Field 3]
 Type=Label
-Text=Enter the poll frequency in minutes.
+Text=Enter the poll frequency in minutes. '0' skips installation of the scheduled task.
 Left=0
 Right=-1
 Top=15
