Option to turn syslog on/off.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -6,6 +6,7 @@ server = 127.0.0.1
 password = abcdefgh
 cname = testclient
 pidfile = /var/run/burp.client.pid
+syslog = 1
 # Ratelimit throttles the send speed. Specified in Megabits per second (Mb/s).
 # ratelimit = 1.5
 # Network timeout defaults to 7200 seconds (2 hours).
