--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -11,6 +11,7 @@ working_dir_recovery_method = delete
 max_children = 5
 max_status_children = 5
 umask = 0022
+syslog = 0
 # Ratelimit throttles the send speed. Specified in Megabits per second (Mb/s).
 # ratelimit = 1.5
 # Network timeout defaults to 7200 seconds (2 hours).
