--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -36,6 +36,17 @@ keep = 7
 # user=graham
 # group=nogroup
 
+# CA options.
+# If you want your server to be a certificate authority and generate its own
+# certificates, uncomment the following lines. If the directory specified in
+# ca_conf does not exist, the server will create, populate it, and the paths
+# indicated by ssl_cert_ca, ssl_cert, ssl_key and ssl_dhfile below will be
+# overwritten.
+# ca_conf=/etc/burp/CA.cnf
+# ca_name=burpCA
+# ca_server_name=burpserver
+# ca_burp_ca=/usr/sbin/burp_ca
+
 # SSL certificate authority - same file on both server and client
 ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
 
