Make Windows automatic CSR stuff work, add some documentation.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -41,11 +41,11 @@ keep = 7
 # certificates, uncomment the following lines. If the directory specified in
 # ca_conf does not exist, the server will create, populate it, and the paths
 # indicated by ssl_cert_ca, ssl_cert, ssl_key and ssl_dhfile below will be
-# overwritten.
-# ca_conf=/etc/burp/CA.cnf
-# ca_name=burpCA
-# ca_server_name=burpserver
-# ca_burp_ca=/usr/sbin/burp_ca
+# overwritten. See docs/burp_ca.txt for more information.
+ca_conf=/etc/burp/CA.cnf
+ca_name=burpCA
+ca_server_name=burpserver
+ca_burp_ca=/usr/sbin/burp_ca
 
 # SSL certificate authority - same file on both server and client
 ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
@@ -54,7 +54,7 @@ ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
 ssl_cert = /etc/burp/ssl_cert-server.pem
 
 # Server SSL key
-#ssl_key = /etc/burp/ssl_cert-server.key
+ssl_key = /etc/burp/ssl_cert-server.key
 
 # SSL key password
 ssl_key_password = password
