--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -28,6 +28,11 @@ syslog = 1
 cross_filesystem=/home
 cross_all_filesystems=0
 
+# Uncomment the following lines to automatically generate a certificate signing
+# request and send it to the server.
+ca_burp_ca=/usr/sbin/burp_ca
+ca_csr_dir=/etc/burp/CA
+
 # SSL certificate authority - same file on both server and client
 ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
 
@@ -35,13 +40,13 @@ ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
 ssl_cert = /etc/burp/ssl_cert-client.pem
 
 # Client SSL key
-#ssl_key = /etc/burp/ssl_cert-client.key
+ssl_key = /etc/burp/ssl_cert-client.key
 
 # SSL key password
 ssl_key_password = password
 
 # Common name in the certificate that the server gives us
-ssl_peer_cn = grkeserver
+ssl_peer_cn = burpserver
 
 # Example syntax for pre/post scripts
 #backup_script_pre=/path/to/a/script
