--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -42,10 +42,10 @@ keep = 7
 # ca_conf does not exist, the server will create, populate it, and the paths
 # indicated by ssl_cert_ca, ssl_cert, ssl_key and ssl_dhfile below will be
 # overwritten. See docs/burp_ca.txt for more information.
-ca_conf=/etc/burp/CA.cnf
-ca_name=burpCA
-ca_server_name=burpserver
-ca_burp_ca=/usr/sbin/burp_ca
+ca_conf = /etc/burp/CA.cnf
+ca_name = burpCA
+ca_server_name = burpserver
+ca_burp_ca = /usr/sbin/burp_ca
 
 # SSL certificate authority - same file on both server and client
 ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
