--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -12,6 +12,8 @@ max_children = 5
 max_status_children = 5
 umask = 0022
 syslog = 0
+# Set this to 0 to only allow timed backups.
+client_can_force_backup = 1
 # Ratelimit throttles the send speed. Specified in Megabits per second (Mb/s).
 # ratelimit = 1.5
 # Network timeout defaults to 7200 seconds (2 hours).
