Have separate CA directories for the client and server. Make 'make install' create the directory /etc/burp/CA-client. Remove getopt from burp_ca, hopefully allowing it to work on Macs.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -31,7 +31,7 @@ cross_all_filesystems=0
 # Uncomment the following lines to automatically generate a certificate signing
 # request and send it to the server.
 ca_burp_ca = /usr/sbin/burp_ca
-ca_csr_dir = /etc/burp/CA
+ca_csr_dir = /etc/burp/CA-client
 
 # SSL certificate authority - same file on both server and client
 ssl_cert_ca = /etc/burp/ssl_cert_ca.pem
