Add 'client_can_list', 'client_can_restore' and 'client_can_verify' options.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -12,8 +12,14 @@ max_children = 5
 max_status_children = 5
 umask = 0022
 syslog = 0
-# Set this to 0 to only allow timed backups.
+# The following options can restrict what the client can do.
+# Set client_can_force_backup to 0 to only allow timed backups.
 client_can_force_backup = 1
+client_can_list = 1
+# Set client_can_restore to 0 if you want restores to only be initialised by
+# the server.
+client_can_restore = 1
+client_can_verify = 1
 # Ratelimit throttles the send speed. Specified in Megabits per second (Mb/s).
 # ratelimit = 1.5
 # Network timeout defaults to 7200 seconds (2 hours).
