Fix bug where block device nodes were not backed up. Add 'read_blockdev' and 'read_all_blockdevs' options that work the same as the equivalent fifo options.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -80,3 +80,6 @@ nobackup = .nobackup
 # from all fifos.
 #read_fifo=/path/to/a/fifo
 #read_all_fifos=0
+# The same for block device nodes.
+#read_blockdev=/path/to/a/blockdev
+#read_all_blockdevs=0
