Add 'notify_success_changes_only' option, which means that success notifications only get sent if there were new or changed files.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -89,6 +89,9 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 # Uncomment the following to have success notifications only if there were
 # warnings.
 #notify_success_warnings_only = 1
+# Uncomment the following to have success notifications only if there were
+# new or changed files.
+#notify_success_changes_only = 1
 
 # Uncomment the following for email notifications of backups that failed.
 #notify_failure_script = /etc/burp/notify_script
