--- a/website/content/main.template
+++ b/website/content/main.template
@@ -88,7 +88,9 @@ Burp, don't suck.
 </td>
 <td align="right">
 <font color="#99ccff">
-Last updated: March 2012
+Last updated: May 2012
+<BR>
+<a href="http://6sync.com">Hosted by 6sync</a>
 </font>
 </td></tr></table>
 
