--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -417,6 +417,42 @@ AC_ARG_WITH(tcp-wrappers,
    ]
 )
 
+AC_ARG_ENABLE(ipv6, AC_HELP_STRING([--enable-ipv6],[Enable IPv6 support]),[want_v6=$enableval],[want_v6=yes])
+
+if test "x$want_v6" = "xno"; then
+        have_ipv6="no"
+else
+    AC_MSG_CHECKING(for IPv6 support)
+    have_ipv6="no"
+    AC_RUN_IFELSE([
+        AC_LANG_PROGRAM(
+              [[ 
+                #include <sys/types.h>
+                #include <sys/socket.h>
+                #include <netinet/in.h>
+              ]],
+              [[
+                
+             		int fd; 
+             		struct sockaddr_in6 foo; 
+             		fd = socket(AF_INET6, SOCK_STREAM, 0); 
+             		return(fd >= 0 ? 0 : 1); 
+             		
+             ]]
+          	)
+          ],
+          have_ipv6=yes,
+          have_ipv6=no,
+          have_ipv6=no)
+    
+    AC_MSG_RESULT($have_ipv6)
+
+    if test $have_ipv6 = yes ; then
+        AC_DEFINE(HAVE_IPV6,,"check if system supports IPV6")
+    fi
+fi
+
+
 dnl -----------------------------------------------------------
 dnl Check whether OpenSSL is available
 dnl -----------------------------------------------------------
@@ -1609,6 +1645,7 @@ Configuration on `date`:
    librsync:			${have_librsync}
    acl:				${have_acl}
    xattr:			${have_xattr}
+   ipv6:			${have_ipv6}
 
   " > config.out
 
