add exclude_re and include_re config keys
include_re=[string]
  Only include file match the regular expression and found in the
  paths found in the include keys.

exclude_re=[string]
  Exclude from the backup path that match the regular expression.
  For example, use /\.cache/ to exclude all the path with a .cache
  within

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -61,10 +61,14 @@ include = /home
 #exclude = /home/graham/testdir/librsync-0.9.7/testsuite
 #include = /home/graham/testdir/librsync-0.9.7/testsuite/deep
 #include = /home/graham/xdir
+# Include path that match a regular expression
+#include_re = photos
 #exclude = /home/graham/testdir/libr
 # Exclude file names ending in '.vdi' or '.vmdk' (case insensitive)
 #exclude_ext = vdi
 #exclude_ext = vmd
+# Exlude file path matching a regular expression
+#exclude_re = \.cache
 # Exclude various temporary file systems. You may want to add devfs, devpts,
 # proc, ramfs, etc.
 exclude_fs = sysfs
