--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -62,7 +62,7 @@ include = /home
 #include = /home/graham/testdir/librsync-0.9.7/testsuite/deep
 #include = /home/graham/xdir
 # Include path that match a regular expression
-#include_re = photos
+#include_regex = /\.cache/
 #exclude = /home/graham/testdir/libr
 # Exclude file names ending in '.vdi' or '.vmdk' (case insensitive)
 #exclude_ext = vdi
