--- a/src/win32/Makefile.installer.in
+++ b/src/win32/Makefile.installer.in
@@ -28,6 +28,8 @@ DEPKGS_BINARIES := \
 	zlib1.dll \
 	libeay32.dll \
 	ssleay32.dll \
+	libpcre-1.dll \
+	libpcreposix-0.dll \
 	openssl.exe
 
 MINGW_LIBS := \
