* Remove '-l <logfile> / logfile=' options because they didn't work properly     were adding to much complexity to the code.   * Add 'stdout=[0|1]' option, which defines whether to log messages to stdout.   * Add 'progress_counter=[0|1]' option for the client, which defines whether     to print counters to stdout.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -7,6 +7,8 @@ password = abcdefgh
 cname = testclient
 pidfile = /var/run/burp.client.pid
 syslog = 1
+stdout = 0
+progress_counters = 1
 # Ratelimit throttles the send speed. Specified in Megabits per second (Mb/s).
 # ratelimit = 1.5
 # Network timeout defaults to 7200 seconds (2 hours).
