--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -11,7 +11,8 @@ working_dir_recovery_method = delete
 max_children = 5
 max_status_children = 5
 umask = 0022
-syslog = 0
+syslog = 1
+stdout = 0
 # The following options can restrict what the client can do.
 # Set client_can_force_backup to 0 to only allow timed backups.
 client_can_force_backup = 1
