--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -81,12 +81,17 @@ timer_arg = Mon,Tue,Wed,Thu,Fri,00,01,02,03,04,05,19,20,21,22,23
 # Allow more hours at the weekend.
 timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 
-# Uncomment the following for email notifications of backups that succeeded.
+# Uncomment the notify_success_* lines for email notifications of backups that
+# succeeded.
+# In the subject line, the following are substituted:
+# %b - "backup"/"restore"/"verify"
+# %c - client name
+# %w - number of warnings, if any
 #notify_success_script = /etc/burp/notify_script
 #notify_success_arg = sendmail -t
 #notify_success_arg = To: youremail@example.com
 #notify_success_arg = From: burp
-#notify_success_arg = Subject: backup succeeded:
+#notify_success_arg = Subject: %b succeeded: %c %w
 # Uncomment the following to have success notifications only if there were
 # warnings.
 #notify_success_warnings_only = 1
@@ -99,7 +104,7 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 #notify_failure_arg = sendmail -t
 #notify_failure_arg = To: youremail@example.com
 #notify_failure_arg = From: burp
-#notify_failure_arg = Subject: backup failed:
+#notify_failure_arg = Subject: %b failed: %c %w
 
 # The server can run scripts on each connection after authentication and before
 # disconnecting.
