Do not skip restores of sockets. Add server_can_restore=[0|1] client side option, so that clients can refuse server initiated restores.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -19,6 +19,15 @@ progress_counters = 1
 # OS path component for the autoupgrade directory on the server.
 # autoupgrade_os=test_os
 
+# Set server_can_restore to 0 if you do not want the server to be able to
+# initiate a restore.
+server_can_restore = 1
+
+# Set an encryption password if you do not trust the server with your data.
+# Note that this will mean that network deltas will not be possible. Each time
+# a file changes, the whole file will be transferred on the next backup.
+# encryption_password = My^$pAsswIrD%@
+
 # More configuration files can be read, using syntax like the following
 # (without the leading '# ').
 # . path/to/more/conf
