Allow server_can_restore and encryption_password to be set with the Windows installer.

--- a/src/win32/installer/ConfigPage2.ini
+++ b/src/win32/installer/ConfigPage2.ini
@@ -1,18 +1,18 @@
 [Settings]
-NumFields=6
+NumFields=9
 
 [Field 1]
 Type=Label
 Text=Poll every:
 Left=0
-Right=45
+Right=90
 Top=0
 Bottom=10
 
 [Field 2]
 Type=Text
 Text=Poll every
-Left=50
+Left=95
 Right=-1
 Top=0
 Bottom=10
@@ -29,14 +29,14 @@ Bottom=30
 Type=Label
 Text=Autoupgrade:
 Left=0
-Right=45
+Right=90
 Top=40
 Bottom=50
 
 [Field 5]
 Type=CheckBox
 ; Text=Autoupgrade
-Left=50
+Left=95
 Right=-1
 Top=40
 Bottom=50
@@ -49,3 +49,26 @@ Right=-1
 Top=55
 Bottom=65
 
+[Field 7]
+Type=Label
+Text=Server can restore:
+Left=0
+Right=90
+Top=78
+Bottom=88
+
+[Field 8]
+Type=CheckBox
+; Text=Server can restore
+Left=95
+Right=-1
+Top=78
+Bottom=88
+
+[Field 9]
+Type=Label
+Text=Allow the server to initiate restores.
+Left=0
+Right=-1
+Top=94
+Bottom=104
