--- a/src/win32/Makefile.installer.in
+++ b/src/win32/Makefile.installer.in
@@ -54,6 +54,7 @@ clean:
 	$(CMD_ECHO)-rm -rf winburp.nsi
 	$(CMD_ECHO)-rm -rf ConfigPage1.ini
 	$(CMD_ECHO)-rm -rf ConfigPage2.ini
+	$(CMD_ECHO)-rm -rf ConfigPage3.ini
 	$(CMD_ECHO)-rm -rf DumpLog.nsh
 
 #
@@ -83,6 +84,7 @@ winburp.nsi:
 	cp ../installer/winburp.nsi .
 	cp ../installer/ConfigPage1.ini .
 	cp ../installer/ConfigPage2.ini .
+	cp ../installer/ConfigPage3.ini .
 	cp ../installer/DumpLog.nsh .
 
 $(INSTALL_EXE): winburp.nsi $(addprefix release@BITS@/,$(BURP_BINARIES) $(DEPKGS_BINARIES) $(MINGW_LIBS))
