Add the ability to restore using a different client. See the 'restore_client' option in the man page.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -116,3 +116,9 @@ timer_arg = Sat,Sun,00,01,02,03,04,05,06,07,08,17,18,19,20,21,22,23
 #server_script_post_arg = 
 #server_script_post_arg = 
 #server_script_post_run_on_fail=0
+
+# Clients that are able to list and restore files belonging to any other
+# client. If this is too permissive, you may set a restore_client for
+# individual original clients in the individual clientconfdir files.
+# restore_client = someclient
+# restore_client = someotherclient
