Add the ability to exclude compression on files by extension. See the 'exclude_comp' option in the man page. Make the functions that strcmp file extensions more efficient.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -98,3 +98,6 @@ nobackup = .nobackup
 # The same for block device nodes.
 #read_blockdev=/path/to/a/blockdev
 #read_all_blockdevs=0
+# Exclude files from compression by extension.
+exclude_comp=bz2
+exclude_comp=gz
