Tweaks for release.

--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -8,7 +8,7 @@ cname = testclient
 pidfile = /var/run/burp.client.pid
 syslog = 0
 stdout = 1
-progress_counters = 1
+progress_counter = 1
 # Ratelimit throttles the send speed. Specified in Megabits per second (Mb/s).
 # ratelimit = 1.5
 # Network timeout defaults to 7200 seconds (2 hours).
