Tweaks to the new version_warn option.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -26,6 +26,10 @@ client_can_verify = 1
 # Network timeout defaults to 7200 seconds (2 hours).
 # network_timeout = 7200
 
+# When the client version does not match the server version, log a warning.
+# Set to 0 to turn it off.
+version_warn = 1
+
 # More configuration files can be read, using syntax like the following
 # (without the leading '# ').
 # . path/to/more/conf
