--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -130,12 +130,15 @@ AC_ARG_ENABLE(static,
 
 STATIC=
 STATIC_DEDUP=
+STATIC_STRIP_VSS=
 if test x$support_static = xyes; then
    STATIC="static-burp"
    STATIC_DEDUP="static-bedup"
+   STATIC_STRIP_VSS="static-vss_strip"
 fi
 AC_SUBST(STATIC)
 AC_SUBST(STATIC_DEDUP)
+AC_SUBST(STATIC_STRIP_VSS)
 
 
 dnl --------------------------------------------------
