Add Patrick Koppen's 'ssl_cipher' option. Add examples to the vss_strip manpage.

--- a/configs/server/burp.conf
+++ b/configs/server/burp.conf
@@ -69,6 +69,9 @@ ssl_cert = /etc/burp/ssl_cert-server.pem
 # Server SSL key
 ssl_key = /etc/burp/ssl_cert-server.key
 
+# Server SSL ciphers
+#ssl_ciphers = 
+
 # SSL key password
 ssl_key_password = password
 
