--- a/configs/client/burp.conf
+++ b/configs/client/burp.conf
@@ -53,6 +53,9 @@ ssl_cert = /etc/burp/ssl_cert-client.pem
 # Client SSL key
 ssl_key = /etc/burp/ssl_cert-client.key
 
+# Client SSL ciphers
+#ssl_ciphers = 
+
 # SSL key password
 ssl_key_password = password
 
