Add Patrick Koppen's burp_ca patches.

--- a/configs/certs/CA/CA.cnf
+++ b/configs/certs/CA/CA.cnf
@@ -23,6 +23,7 @@ name_opt                = ca_default
 cert_opt                = ca_default
 
 x509_extensions         = usr_cert
+copy_extensions         = copy
 policy                  = policy_anything
 
 [ usr_cert ]
