Rework the test script so that it can test Windows clients.

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,6 +6,10 @@ clean:
 	@$(RMF) logs
 	@$(RMF) restore*
 	@$(RMF) target
+	@$(RMF) build.tar.bz2
+	@$(RMF) clientscript
+	@$(RMF) serverscript
+	@$(RMF) windowsscript
 
 test:
 	./test_self
